<resources>
    <string name="app_name">智取华容道</string>
    <string name="action_settings">Settings</string>
    <string name="level0">小试身手</string>
    <string name="level1">横刀立马</string>
    <string name="level2">齐头并前</string>
    <string name="level3">兵分三路</string>
    <string name="level4">屯兵东路</string>
    <string name="level5">左右布兵</string>
    <string name="level6">前挡后阻</string>
    <string name="level7">层层设防</string>
    <string name="start_game">试试手气</string>
    <string name="select_level">选择关卡</string>
    <string name="help">帮助</string>
    <string name="start_game_hint">随便来一关，试试手气</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="levelup">恭喜过关，要继续挑战吗?</string>
    <string name="help_what">华容道是古老的汉族民间益智游戏，以其变化多端、百玩不厌的特点与魔方、独立钻石棋一起被国外智力专家并称为“智力游戏界的三个不可思议”。</string>
    <string name="help_howto">通过移动各个棋子，帮助曹操从初始位置移到棋盘最下方中部，从出口逃走。不允许跨越棋子，还要设法用最少的步数把曹操移到出口。</string>
    <string name="help_thanks">部分图片来自于memoryboxes@gmail.com,经过邮件联系后，感谢其授予我图片使用权利。另一部分图片来自网络转载，如有侵权，立即删除</string>
    <string name="help_about">1589567033@qq.com</string>
    <string name="help_what_title">介绍:</string>
    <string name="help_howto_title">如何挑战:</string>
    <string name="help_thanks_title">素材来源:</string>
    <string name="help_about_title">联系作者:</string>
</resources>
