<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/chinastyle1"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="80"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/textViewHelpWhatTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_what_title"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewHelpWhat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_what"
            android:textColor="?android:attr/colorPressedHighlight"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewHelpHowtoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/help_howto_title"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewHelpHowto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_howto"
            android:textColor="?android:attr/colorPressedHighlight"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/textViewHelpThanksTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="@string/help_thanks_title" />
        <TextView
            android:id="@+id/textViewHelpThanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="?android:attr/colorPressedHighlight"
            android:text="@string/help_thanks" />

        <TextView
            android:id="@+id/textViewHelpAboutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/help_about_title"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewHelpAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/help_about"
            android:textColor="?android:attr/colorPressedHighlight"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
